tests/NormalTests/paczka1/small_fuzzy/83930751.err
Error in line 2: YclYh4aFQB A894 85,6
Error in line 3: YclYh4aFQB A691 29,3
